--- a/content/Blog_3.html
+++ b/content/Blog_3.html
@@ -144,7 +144,7 @@ r2_sklearn = r2_score(y_test, y_sklearn_pred)</code></pre>
 <p>This validates that our manual implementation produces the same result as scikit-learn’s optimized solution.</p>
 
 <div class="text-center">
-  <img src="../img/Blog_3/_5.png" alt="Model Comparison Results" class="img-fluid rounded shadow mt-3"/>
+  <img src="/Blog/img/Blog_3/_5.png" alt="Model Comparison Results" class="img-fluid rounded shadow mt-3"/>
 </div>
 
 
