--- a/content/Blog_3.html
+++ b/content/Blog_3.html
@@ -56,7 +56,7 @@ y = housing.target
 print("Data shape:", X.shape)
 print("Target shape:", y.shape)</code></pre>
 <div class="mt-2 mb-4 text-center">
-  <img src="/img/Blog_3/_1.png" alt="Code Output Screenshot" class="img-fluid rounded shadow"/>
+  <img src="img/Blog_3_1.png" alt="Code Output Screenshot" class="img-fluid rounded shadow"/>
 </div>
 
 
@@ -68,7 +68,7 @@ X_train, X_test, y_train, y_test = train_test_split(
     print("Training data shape:", X_train.shape)
     print("Testing data shape:", X_test.shape)</code></pre>
 <div class="mt-2 mb-4 text-center">
-  <img src="/img/Blog_3/_2.png" alt="Code Output Screenshot" class="img-fluid rounded shadow"/>
+  <img src="img/Blog_3/_2.png" alt="Code Output Screenshot" class="img-fluid rounded shadow"/>
 </div>
 
 
@@ -98,7 +98,7 @@ r2 = r2_score(y_test, y_pred)
 print("Mean Squared Error (manual OLS):", mse)
 print("R^2 Score:", r2)</code></pre>
 <div class="mt-2 mb-4 text-center">
-  <img src="/img/Blog_3/_3.png" alt="Code Output Screenshot" class="img-fluid rounded shadow"/>
+  <img src="img/Blog_3/_3.png" alt="Code Output Screenshot" class="img-fluid rounded shadow"/>
 </div>
 
 
@@ -132,7 +132,7 @@ y_sklearn_pred = model.predict(X_test)</code></pre>
 mse_sklearn = mean_squared_error(y_test, y_sklearn_pred)
 r2_sklearn = r2_score(y_test, y_sklearn_pred)</code></pre>
 <div class="mt-2 mb-4 text-center">
-  <img src="/img/Blog_3/_4.png" alt="Code Output Screenshot" class="img-fluid rounded shadow"/>
+  <img src="img/Blog_3/_4.png" alt="Code Output Screenshot" class="img-fluid rounded shadow"/>
 </div>
 
 
@@ -144,7 +144,7 @@ r2_sklearn = r2_score(y_test, y_sklearn_pred)</code></pre>
 <p>This validates that our manual implementation produces the same result as scikit-learn’s optimized solution.</p>
 
 <div class="text-center">
-  <img src="/img/Blog_3/_5.png" alt="Model Comparison Results" class="img-fluid rounded shadow mt-3"/>
+  <img src="img/Blog_3/_5.png" alt="Model Comparison Results" class="img-fluid rounded shadow mt-3"/>
 </div>
 
 
