--- a/content/Blog_3.html
+++ b/content/Blog_3.html
@@ -57,6 +57,13 @@ print("Data shape:", X.shape)
 print("Target shape:", y.shape)</code></pre>
 <div class="mt-2 mb-4 text-center">
   <img src="img/Blog_3_1.png" alt="Code Output Screenshot" class="img-fluid rounded shadow"/>
+
+<h4 class="mt-4">🔗 Reference</h4>
+<p>You can explore the full notebook used to generate this blog on GitHub:</p>
+<p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Linear_Regression_OLS.ipynb" target="_blank">
+  📓 Linear_Regression_OLS.ipynb on GitHub
+</a></p>
+
 </div>
 
 
@@ -69,6 +76,13 @@ X_train, X_test, y_train, y_test = train_test_split(
     print("Testing data shape:", X_test.shape)</code></pre>
 <div class="mt-2 mb-4 text-center">
   <img src="img/Blog_3_2.png" alt="Code Output Screenshot" class="img-fluid rounded shadow"/>
+
+<h4 class="mt-4">🔗 Reference</h4>
+<p>You can explore the full notebook used to generate this blog on GitHub:</p>
+<p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Linear_Regression_OLS.ipynb" target="_blank">
+  📓 Linear_Regression_OLS.ipynb on GitHub
+</a></p>
+
 </div>
 
 
@@ -117,6 +131,13 @@ print("Mean Squared Error (manual OLS):", mse)
 print("R^2 Score:", r2)</code></pre>
 <div class="mt-2 mb-4 text-center">
   <img src="img/Blog_3_3.png" alt="Code Output Screenshot" class="img-fluid rounded shadow"/>
+
+<h4 class="mt-4">🔗 Reference</h4>
+<p>You can explore the full notebook used to generate this blog on GitHub:</p>
+<p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Linear_Regression_OLS.ipynb" target="_blank">
+  📓 Linear_Regression_OLS.ipynb on GitHub
+</a></p>
+
 </div>
 
 
@@ -172,6 +193,13 @@ mse_sklearn = mean_squared_error(y_test, y_sklearn_pred)
 r2_sklearn = r2_score(y_test, y_sklearn_pred)</code></pre>
 <div class="mt-2 mb-4 text-center">
   <img src="img/Blog_3_4.png" alt="Code Output Screenshot" class="img-fluid rounded shadow"/>
+
+<h4 class="mt-4">🔗 Reference</h4>
+<p>You can explore the full notebook used to generate this blog on GitHub:</p>
+<p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Linear_Regression_OLS.ipynb" target="_blank">
+  📓 Linear_Regression_OLS.ipynb on GitHub
+</a></p>
+
 </div>
 
 
@@ -184,6 +212,13 @@ r2_sklearn = r2_score(y_test, y_sklearn_pred)</code></pre>
 
 <div class="text-center">
   <img src="img/Blog_3_5.png" alt="Model Comparison Results" class="img-fluid rounded shadow mt-3"/>
+
+<h4 class="mt-4">🔗 Reference</h4>
+<p>You can explore the full notebook used to generate this blog on GitHub:</p>
+<p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Linear_Regression_OLS.ipynb" target="_blank">
+  📓 Linear_Regression_OLS.ipynb on GitHub
+</a></p>
+
 </div>
 
 
@@ -198,4 +233,11 @@ r2_sklearn = r2_score(y_test, y_sklearn_pred)</code></pre>
     </ul>
 
     <p class="fw-bold">This is just the beginning. We’ll dive deeper into Ridge, Lasso, and more in upcoming blogs. Stay tuned! 🙌</p>
+
+<h4 class="mt-4">🔗 Reference</h4>
+<p>You can explore the full notebook used to generate this blog on GitHub:</p>
+<p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Linear_Regression_OLS.ipynb" target="_blank">
+  📓 Linear_Regression_OLS.ipynb on GitHub
+</a></p>
+
 </div>
