--- a/content/Blog_4.html
+++ b/content/Blog_4.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-    <h2 class="fw-bold mb-3">Linear Regression from Scratch — With Gradient Descent 🧐📉</h2>
+    <h2 class="fw-bold mb-3">Linear Regression from Scratch — With Gradient Descent 📉</h2>
     <p class="text-muted">Published: <span id="publish-date">April 23, 2025</span></p>
     <hr />
   
@@ -21,7 +21,7 @@
       </ul>
     </p>
   
-    <h4 class="mt-4">🌟 2. Why Do We Need a Loss Function?</h4>
+    <h4 class="mt-4"> 2. Why Do We Need a Loss Function?</h4>
     <p>
       When we train a machine learning model, we want it to make good predictions. But how do we know if it's doing a good job?
       That’s where a <strong>loss function</strong> comes in. It’s a mathematical tool that tells us how far off our predictions are from the actual values.
@@ -55,7 +55,7 @@
       So, in short: <strong>Loss tells us how wrong we are. Gradient descent tells us how to get less wrong.</strong> 🚀
     </p>
   
-    <h4 class="mt-4">📅 4. Load & Scale the Data</h4>
+    <h4 class="mt-4"> 4. Load & Scale the Data</h4>
     <pre class="bg-light p-3 rounded"><code>from sklearn.datasets import fetch_california_housing
   from sklearn.model_selection import train_test_split
   from sklearn.preprocessing import StandardScaler
@@ -71,7 +71,7 @@
   X_test_scaled = scaler.transform(X_test)</code></pre>
     <p><strong>Why scale?</strong> Gradient descent converges faster and more reliably when features are on the same scale.</p>
   
-    <h4 class="mt-4">🪪 5. scikit-learn Linear Regression</h4>
+    <h4 class="mt-4"> 5. scikit-learn Linear Regression</h4>
     <pre class="bg-light p-3 rounded"><code>from sklearn.linear_model import LinearRegression
   from sklearn.metrics import mean_squared_error, r2_score
   
@@ -84,17 +84,17 @@
   
     <h4 class="mt-4">🔧 6. From Scratch: Function by Function</h4>
   
-    <h5>✅ Function 1: Prediction</h5>
+    <h5>Function 1: Prediction</h5>
     <p>This function performs the forward pass and generates predicted values.</p>
     <pre class="bg-light p-3 rounded"><code>def predict(X, weights, bias):
       return np.dot(X, weights) + bias</code></pre>
   
-    <h5>✅ Function 2: Loss Calculation</h5>
+    <h5>Function 2: Loss Calculation</h5>
     <p>This function calculates how far the predicted values are from the actual values using MSE.</p>
     <pre class="bg-light p-3 rounded"><code>def compute_loss(y_true, y_pred):
       return np.mean((y_true - y_pred) ** 2)</code></pre>
   
-    <h5>✅ Function 3: Compute Gradients</h5>
+    <h5>Function 3: Compute Gradients</h5>
     <p>This function computes the gradients (partial derivatives) of the loss with respect to the weights and bias.</p>
     <pre class="bg-light p-3 rounded"><code>def compute_gradients(X, y_true, y_pred):
       n = X.shape[0]
@@ -102,7 +102,7 @@
       db = -2/n * np.sum(y_true - y_pred)
       return dw, db</code></pre>
   
-    <h5>✅ Function 4: Training with Gradient Descent</h5>
+    <h5>Function 4: Training with Gradient Descent</h5>
     <p>This is the core training loop where weights and bias are updated iteratively to minimize loss.</p>
     <pre class="bg-light p-3 rounded"><code>def train(X, y, lr=0.01, epochs=1000):
       n_features = X.shape[1]
@@ -157,7 +157,7 @@
       <li><strong>Custom Model</strong> — MSE: ~similar, R²: ~similar</li>
     </ul>
   
-    <h4 class="mt-4">✅ Final Thoughts</h4>
+    <h4 class="mt-4">Final Thoughts</h4>
     <p>
       By implementing linear regression both with and without libraries, we got a deep understanding of how models learn.
       Gradient descent is foundational in machine learning — and this hands-on build makes it far less mysterious.
@@ -167,10 +167,10 @@
 
     <h4 class="mt-4">🔗 Reference</h4>
     <p>You can explore the full notebook used to generate this blog on GitHub:</p>
-    <p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Linear_Regression_OLS.ipynb" target="_blank">
+    <p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Linear_Regresson.ipynb" target="_blank">
       📓 Linear_Regression_OLS.ipynb on GitHub
     </a></p>
-    
+
     <p class="fw-bold">Next up: regularization (Ridge & Lasso) and nonlinear regression. Stay curious! 🔍</p>
   
 </div>
