--- a/index.html
+++ b/index.html
@@ -197,10 +197,7 @@
     }
 
     // Load blog data
-    fetch("data/blogData.json?version=2.1", {
-    cache: "no-cache"
-    });
-
+    fetch("data/blogData.json?v=2.0")
 
       .then((res) => res.json())
       .then((data) => {
@@ -211,7 +208,7 @@
     // About page
     document.getElementById("about-link").addEventListener("click", function (e) {
       e.preventDefault();
-      fetch("content/About.html?version=2.1", { cache: "no-cache" })
+      fetch("content/About.html")
         .then((res) => res.text())
         .then((html) => {
           mainContent.innerHTML = html;
