--- a/content/Blog_4.html
+++ b/content/Blog_4.html
@@ -167,8 +167,8 @@
 
     <h4 class="mt-4">🔗 Reference</h4>
     <p>You can explore the full notebook used to generate this blog on GitHub:</p>
-    <p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Linear_Regresson.ipynb" target="_blank">
-      📓 Linear_Regression_OLS.ipynb on GitHub
+    <p><a href="https://github.com/Pulkit12dhingra/Blog/blob/main/notebooks/Linear_Regression.ipynb" target="_blank">
+      📓 Linear_Regression.ipynb on GitHub
     </a></p>
 
     <p class="fw-bold">Next up: regularization (Ridge & Lasso) and nonlinear regression. Stay curious! 🔍</p>
