--- a/content/About.html
+++ b/content/About.html
@@ -1,7 +1,53 @@
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Byte-Sized-Brilliance-AI</title>
+  <link rel="icon" type="image/png" href="img/icon.png" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Pulkit's Blog" />
+  <meta property="og:description" content="Explore tutorials, projects, and insights into AI, coding, and more." />
+  <meta property="og:image" content="img/social-preview.jpg" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Pulkit's Blog" />
+  <meta name="twitter:description" content="Explore tutorials, projects, and insights into AI, coding, and more." />
+  <meta name="twitter:image" content="img/social-preview.jpg" />
+  
+  
+
+  <!-- Bootstrap CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <!-- Bootstrap Icons -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    rel="stylesheet"
+  />
+
+  <link rel="stylesheet" href="data/style.css?v=1.0.0" />
+  <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  rel="stylesheet"
+/>
+</head>
+
+<body>
 <div class="container py-5">
     <div class="text-center mb-4">
-      <h1 class="fw-bold">👋 Hi, I'm Pulkit Dhingra</h1>
-      <p class="text-muted">AI enthusiast | Blogger | Engineer | Curious Human</p>
+      
+      <div class="d-flex justify-content-between align-items-center mb-4">
+        <h1 class="fw-bold">👋 Hi, I'm Pulkit Dhingra</h1>
+        <p class="text-muted">AI enthusiast | Blogger | Engineer | Curious Human</p>
+        <a href="../index.html" class="btn btn-primary">
+          ← Back to Home
+        </a>
+      </div>
     </div>
   
     <div class="row justify-content-center">
@@ -37,4 +83,4 @@
       </div>
     </div>
   </div>
-  
+</body>  
