--- a/content/Blog_4.html
+++ b/content/Blog_4.html
@@ -1,5 +1,50 @@
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Byte-Sized-Brilliance-AI</title>
+  <link rel="icon" type="image/png" href="img/icon.png" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Pulkit's Blog" />
+  <meta property="og:description" content="Explore tutorials, projects, and insights into AI, coding, and more." />
+  <meta property="og:image" content="img/social-preview.jpg" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Pulkit's Blog" />
+  <meta name="twitter:description" content="Explore tutorials, projects, and insights into AI, coding, and more." />
+  <meta name="twitter:image" content="img/social-preview.jpg" />
+  
+  
+
+  <!-- Bootstrap CSS -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <!-- Bootstrap Icons -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    rel="stylesheet"
+  />
+
+  <link rel="stylesheet" href="data/style.css?v=1.0.0" />
+  <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  rel="stylesheet"
+/>
+</head>
+<body>
 <div class="container mt-4">
-    <h2 class="fw-bold mb-3">Linear Regression from Scratch — With Gradient Descent 📉</h2>
+    
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2 class="fw-bold mb-3">Linear Regression from Scratch — With Gradient Descent 📉</h2>
+      <a href="../index.html" class="btn btn-primary">
+        ← Back to Home
+      </a>
+    </div>
     <p class="text-muted">Published: <span id="publish-date">April 23, 2025</span></p>
     <hr />
   
@@ -174,4 +219,4 @@
     <p class="fw-bold">Next up: regularization (Ridge & Lasso) and nonlinear regression. Stay curious! 🔍</p>
   
 </div>
-  
+</body>  
