--- a/content/Blog_1.html
+++ b/content/Blog_1.html
@@ -38,12 +38,13 @@
 </head>
 <body>
 <div class="container mt-4">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h2 class="fw-bold mb-3">Hello World! 🚀 — My First Blog Post</h2>
-      <a href="../index.html" class="btn btn-primary">
-        ← Back to Home
-      </a>
-    </div>
+  <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4">
+    <h2 class="fw-bold mb-0">Hello World! 🚀 — My First Blog Post</h2>
+    <a href="../index.html" class="btn btn-primary mt-2 mt-md-0">
+      ← Back to Home
+    </a>
+  </div>
+  
     <p class="text-muted">Published: <span id="publish-date">April 14, 2025</span></p>
     <hr />
   
