--- a/content/Blog_2.html
+++ b/content/Blog_2.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 <div class="container mt-4">
-  <div class="d-flex justify-content-between align-items-center mb-4">
+  <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4">
     <h2 class="fw-bold mb-0">Setting Up Your Python Environment 🐍</h2>
     <a href="../index.html" class="btn btn-primary">
       ← Back to Home
