--- a/content/Blog_4.html
+++ b/content/Blog_4.html
@@ -39,7 +39,7 @@
 <body>
 <div class="container mt-4">
     
-    <div class="d-flex justify-content-between align-items-center mb-4">
+  <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4">
       <h2 class="fw-bold mb-3">Linear Regression from Scratch — With Gradient Descent 📉</h2>
       <a href="../index.html" class="btn btn-primary">
         ← Back to Home
