--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a class="nav-link text-white" href="#" id="about-link">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#" id="home-link">Home</a>
+            <a class="nav-link text-white" href="https://pulkit12dhingra.github.io/portfolio/" id="home-link">Portfolio</a>
           </li>
         </ul>
   
