try to get a url

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
             <a class="nav-link text-white" href="#" id="about-link">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-white" href="#" id="home-link">Blog List</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-white" href="https://pulkit12dhingra.github.io/portfolio/" target="_blank">Portfolio</a>
           </li>
         </ul>
