--- a/index.html
+++ b/index.html
@@ -180,9 +180,15 @@
           //   </a>`;
           html += `
             <a href="content/${post.file}" class="list-group-item list-group-item-action mb-2">
-              <h5 class="mb-1">${post.title}</h5>
-              <p class="mb-1">${post.summary}</p>
+              <div class="d-flex justify-content-between align-items-start">
+                <div>
+                  <h5 class="mb-1">${post.title}</h5>
+                  <p class="mb-1">${post.summary}</p>
+                </div>
+                <small class="text-muted text-end ms-3">${post.date}</small>
+              </div>
             </a>`;
+
         });
         html += "</div>";
       }
@@ -260,8 +266,8 @@
       );
       renderBlogList(filtered);
     });
-  </script>
-
+  </script> 
+  
   <!-- Bootstrap JS -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
