--- a/content/Blog_3.html
+++ b/content/Blog_3.html
@@ -3,19 +3,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Byte-Sized-Brilliance-AI</title>
-  <link rel="icon" type="image/png" href="img/icon.png" />
+  <link rel="icon" type="image/png" href="../img/icon.png" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Pulkit's Blog" />
   <meta property="og:description" content="Explore tutorials, projects, and insights into AI, coding, and more." />
-  <meta property="og:image" content="img/social-preview.jpg" />
+  <meta property="og:image" content="../img/social-preview.jpg" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Pulkit's Blog" />
   <meta name="twitter:description" content="Explore tutorials, projects, and insights into AI, coding, and more." />
-  <meta name="twitter:image" content="img/social-preview.jpg" />
+  <meta name="twitter:image" content="../img/social-preview.jpg" />
   
   
 
